# llamia_v3_2

./: .gitignore  12.25.25.txt  Patch.txt  README.md  code_analysis_report.txt  main.py  pyproject.toml  report.txt  requirements.txt  text.txt  todo.txt
.llamia_chroma/: chroma.sqlite3
docs/: STANDARDS.md
llamia_v3_2/: config.py  graph.py  graph.py.bak  graph_improved.py  llm_client.py  llm_client.py.bak  state.py  state.py.orig  state.py.rej  state_improved.py.orig  state_improved.py.rej  state_utils.py  test_output.txt
llamia_v3_2/docs/: OVERVIEW.md
llamia_v3_2/nodes/: chat.py  coder.py  coder_constraints.py  coder_git.py  coder_json.py  coder_patch_context.py  coder_prompts.py  coder_utils.py  critic.py  executor.py  failure_handler.py  intent_classifier.py  intent_router.py  planner.py  research.py  research_web.py
llamia_v3_2/repl/: __init__.py  app.py  config.py  contract.py  input_utils.py  logging_utils.py  paths.py  repo_utils.py  state_utils.py  timeouts.py
llamia_v3_2/tools/: exec_tools.py  fs_tools.py  rag_index.py  web_search.py
tests/: test_graph_build.py  test_improved_graph_routing.py.orig  test_improved_graph_routing.py.rej  test_improved_state.py  test_improved_state_management.py  test_llm_client.py  test_state_management.py
