[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamia-v3-2"
version = "0.1.0"
description = "Llamia v3.2 multi-agent skeleton"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.51.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "llama-index>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-embeddings-ollama>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llamia_v3_2*"]
